Fixed facebook and added basic timer bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MGP_Lab02_153492Y</string>
+    <string name="AppID">944827045647516</string>
 </resources>
